# routes/my-books.js
@@ -1,0 +1,8 @@
+/* Required Statements */
+const express = require("express");
+const router = express.Router();
+const { userBooks } = require("../controllers/my-books");
+
+router.get("/", userBooks);
+
+module.exports = router;
